syntax = "proto3";
package inference.inference;

option go_package = "github.com/productscience/inference/x/inference/types";

message InferenceValidationDetails {
  uint64 epoch_id = 1; // The ID of the epoch!
  string inference_id = 2;
  string executor_id = 3;
  int32 executor_reputation = 4;
  uint64 traffic_basis = 5;
  uint64 executor_power = 6;
  string model = 7;
  uint64 total_power = 8;
  int64 created_at_block_height = 9; // Should be the same as block_finished for the inference
}
